# comprobo20

./: .gitignore  README.md  TODO
com_workshop/: CMakeLists.txt  package.xml
neato_gazebo/: CMakeLists.txt  package.xml
neato_gazebo/bod_volcano/: model.config
neato_gazebo/bod_volcano/meshes/: Terrain.mtl
neato_gazebo/launch/: neato_bod.launch  neato_dh.launch  neato_empty_world.launch  neato_flatland_world.launch  neato_gauntlet_world.launch  neato_maze_world.launch  neato_no_spawn.launch  neato_office_world.launch  neato_world.launch  neato_world_2bots.launch  neato_world_no_spawn.launch  prep_for_bag.launch  robot.launch
neato_gazebo/model/bod/: bod.sdf  model.config
neato_gazebo/model/bod/meshes/: bridge_of_doom.dae
neato_gazebo/model/bod_ice/: bod.sdf  model.config
neato_gazebo/model/bod_volcano/: model.sdf
neato_gazebo/model/bod_volcano/meshes/: Bridge of Doom.mtl  Bridge of Doom.stl  NoBridge.dae  NoBridge.mtl  Terrain.mtl
neato_gazebo/model/dining_hall/: model.config  model.sdf
neato_gazebo/model/dining_hall_obj/: model.config  model.sdf
neato_gazebo/scripts/: simulator_adapter.py
neato_gazebo/worlds/: bod.world  bod_ice_bridge.world  bod_no_spawn.world  bod_volcano.world  bod_volcano_with_camera.world  cube.world  dh.world  dh_regular.world  empty.world  empty_no_spawn.world  flatland.world  flatland_no_spawn.world  gauntlet.world  gauntlet_final.world  gauntlet_no_spawn.world  ice_rink.world  maze.world  test_flashlight.world
neato_robot/neato_description/: CMakeLists.txt  changes_for_sdf  model.config  model_with_camera.config  package.xml
neato_robot/neato_description/launch/: view_model.launch
neato_robot/neato_description/rviz/: model.rviz
neato_robot/neato_description/sdf/: neato.sdf  neato_with_camera.sdf
neato_robot/neato_description/urdf/: .neato_gazebo.urdf.xacro.swp  common_properties.urdf.xacro  neato.urdf.xacro  neato_gazebo.urdf.xacro  neato_standalone.urdf.xacro
(+151 files in other folders)
