<?xml version="1.0"?>
<package>
  <name>neato_gazebo</name>
  <version>0.0.0</version>
  <description>The neato_gazebo package</description>

  <maintainer email="pieter.vanzutven@segula.nl">Pieter van Zutven</maintainer>

  <license>TODO</license>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>neato_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
