<?xml version="1.0"?>
<package>
  <name>neato_gazebo</name>
  <version>0.0.0</version>
  <description>The neato_gazebo package</description>

  <maintainer email="pieter.vanzutven@segula.nl">Pieter van Zutven</maintainer>

  <license>TODO</license>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>neato_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

    <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/model" />
    </export>
</package>
