<?xml version="1.0"?>
<package>
  <name>neato_description</name>
  <version>0.0.0</version>
  <description>The neato_description package</description>

  <maintainer email="pieter.vanzutven@segula.nl">Pieter van Zutven</maintainer>

  <license>TODO</license>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
